app/app.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
:root,
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
button,
video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section,
ul {
	display: block;
}

/* Hide the arrows in Chrome, Safari, Edge, and Opera */
input[type='number']::-webkit-outer-spin-button,
input[type='number']::-webkit-inner-spin-button {
	-webkit-appearance: none;
	margin: 0;
}

body {
	margin: 0;
	line-height: 1.5;
	width: 400px;
	max-width: 400px;
	background-color: #f3f3f3;
	font-size: 14px;
	color: #545454;
	overflow: hidden;
	font-family: 'Inter', 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

/* border */
button,
input,
.header-section,
.last-impersonated,
.accounts-list,
.status,
.backup,
.settings {
	border: rgb(230, 230, 230) 1px solid;
	border-radius: 3px;
	background-color: white;
}

.header-section {
	background-color: white;
}

.header-section button {
	opacity: 0.5;
	margin-bottom: auto;
}

.header-section button:hover {
	opacity: 1;
}

h1 {
	font-size: 20px;
}

ol,
ul {
	list-style: none;
}

blockquote,
q {
	quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
	content: '';
	content: none;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

.main-section {
	margin: 10px;
	display: flex;
	flex-direction: column;
	gap: 5px;
}

.main-section.blurred {
	pointer-events: none; /* Optional: Disable interaction */
}

section.accounts-list {
	max-height: 280px;
	overflow: hidden;
	max-height: 280px;
	overflow: hidden;
	display: flex;
	flex-direction: column;
}

.lists-groups {
	max-height: inherit;
	overflow-y: auto;
	overflow-x: hidden;
	scrollbar-width: none;
	flex-grow: 1;
}

.lists-groups:hover {
	scrollbar-width: thin;
}

.full {
	flex: 1;
}

hr {
	display: flex;
	justify-self: center;
	width: 90%;
}

input {
	height: 25px;
	padding-left: 5px;
	font-size: 14px;
	box-sizing: border-box;
}

input:focus {
	outline: rgb(215, 215, 215) 1px solid;
}

button {
	font-size: 16px;
}

button:hover:not(.header-section button) {
	background-color: rgb(200, 200, 200);
}

button,
.group-name-icon {
	display: flex;
	justify-content: center;
	align-items: center;
	width: 25px;
	height: 25px;
}

.accounts-list button,
.last-impersonated button {
	border: 0;
}

.last-impersonated,
.accounts-list {
	background-color: white;
}

p.lists-ids,
p.group-name-title,
p.account-id,
.settings-modal p {
	padding-left: 5px;
}

p.account-name {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	display: inline-block;
}

p.account-name:hover {
	text-overflow: unset;
	overflow-x: auto;
	scrollbar-width: thin;
}

ul {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

li,
.lists-title,
.header-section,
.form-inputs,
.form-labels,
.filter-bar,
.form-filter-list,
.footer-section,
.size-row {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: space-between;
	gap: 3px;
	width: 100%;
	white-space: nowrap;
}

li:hover,
li:hover button {
	background-color: rgb(236, 236, 236);
}

li.pinned-down:hover,
li.pinned-down:hover button {
	background-color: rgb(160, 185, 210);
}

li.pinned-down,
li.pinned-down button {
	background-color: rgb(184, 207, 231);
}

li.pinned-down button:hover {
	background-color: rgb(144, 168, 193);
}

.lists-ids,
.list-id,
.form-id,
img.logo {
	width: 90px;
}

.lists-names,
.list-name,
.form-name {
	width: 160px;
}

.hidden {
	display: none;
}

.up {
	transform: rotate(180deg);
}

.accounts-list-group {
	overflow: hidden;
	max-height: auto;
}

.accounts-list-group.hide {
	max-height: 0;
}

.settings-modal {
	position: absolute;
	background-color: #f3f3f3;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	z-index: 1000;
	gap: 5px;
}

.settings-modal .lists-title {
	height: 25px;
}

.settings-main-section {
	display: flex;
	flex-direction: column;
	margin-bottom: auto;
	gap: 5px;
}

.status p {
	padding-left: 5px;
}

.status span {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 25px;
	padding-right: 5px;
}

.hidden {
	display: none;
}

